# TripleTriadNative

./: .gitignore  Triple Triad Tamriel.esp  TripleTriadTamriel_DISTR.ini  meta.ini
SKSE_Plugin_Source/: CMakeLists.txt  CMakePresets.json
SKSE_Plugin_Source/src/: Papyrus.cpp  Papyrus.h  main.cpp
scripts/: TT_NativeFunctions.pex  TT_PlayerAliasScript.pex  TT_PlayerCardsChestScript.pex  TT_Skyrim_QuestScript.pex
scripts/_vellum_backup/: TT_PlayerAliasScript.pex
scripts/source/: TT_NativeFunctions.psc  TT_NativeFunctions.vel  TT_PlayerAliasScript.psc  TT_PlayerAliasScript.vel  TT_PlayerCardsChestScript.psc  TT_PlayerCardsChestScript.vel  TT_Skyrim_QuestScript.psc
